--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch app.js",
     "start": "node app.js",
-    "install": "npm install"
+    "install": "node install",
+    "populate": "node db/populate.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,11 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.13.3"
   },
   "devDependencies": {
     "dotenv": "^16.4.7"
