--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
+    "method-override": "^3.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3"
