--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch app.js",
     "start": "node app.js",
-    "install": "node install",
+    "build": "npm install",
     "populate": "node db/populate.js"
   },
   "keywords": [],
